# DjangoX

./: .gitignore  README.md  db.sqlite3  db.sqlite3.old  pyproject.toml
config/: settings.py  urls.py
staticfiles/: staticfiles.json
templates/: _base.html
templates/learning_journal/: topic_create.html  topic_delete.html  topic_details.html  topic_list.html  topic_update.html
templates/topics/: topic_confirm_delete.html  topic_detail.html  topic_form.html  topic_list.html  topic_update.html
topics/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
