[tool.poetry]
name = "djangox"
version = "0.1.0"
description = ""
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b0"
flake8 = "^4.0.1"
Django = "^3.2.9"
django-crispy-forms = "^1.13.0"
django-debug-toolbar = "^3.2.2"
whitenoise = "^5.3.0"
django-allauth = "^0.46.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
